--- a/Japanizor/wwwroot/index.html
+++ b/Japanizor/wwwroot/index.html
@@ -13,7 +13,18 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+    <app>
+        <div class="mx-auto">
+            <div>
+                <p class="text-center">Loading...</p>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                         aria-valuenow="100" aria-valuemin="0"
+                         aria-valuemax="100" style="width: 75%"></div>
+                </div>
+            </div>
+        </div>
+    </app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
