--- a/Japanizor/wwwroot/index.html
+++ b/Japanizor/wwwroot/index.html
@@ -1,30 +1,31 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Japanizor</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="Japanizor.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
 <body>
-    <app>
-        <div class="mx-auto">
+    <div id="app">
+        <div class="content px-4 d-flex justify-content-center">
             <div>
                 <p class="text-center">Loading...</p>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="100" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 75%"></div>
+                    aria-valuenow="100" aria-valuemin="0"
+                    aria-valuemax="100" style="width: 75%"></div>
                 </div>
             </div>
         </div>
-    </app>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
